{
    "name": "Player2",
    "maps": [
        {
            "name": "InGame",
            "id": "9215ee09-fced-4897-810a-fc4d74bdd16a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "70657fcd-dd6c-43d2-a07e-755a4c9f8e43",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Value",
                    "id": "3997cf57-9568-4eb9-8f94-cb2d1cf63182",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "943dde7c-f03f-478c-895a-6a31ca56c74c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=30,y=30)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Phone",
                    "id": "106ad277-41df-4026-83ab-1330b3eaa88a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cb66f481-f941-4aa5-8f52-083f4741648f",
                    "path": "<Touchscreen>/primaryTouch/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c9231759-cfb2-4295-97d9-de75ddf45f8e",
                    "path": "<Touchscreen>/primaryTouch/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9333fde1-8ecb-4138-8be9-4ec178afed2c",
                    "path": "<Touchscreen>/primaryTouch/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4fe9804e-71d3-4fcd-a8db-af9cc16b47a4",
                    "path": "<Touchscreen>/primaryTouch/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4c8a7b87-8c82-42e3-bc4c-1f8531df78ce",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Ps4Joystick",
                    "id": "45d5020d-a262-4954-8cee-3bc6874efe35",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "97a9bb46-aafc-493f-b7d8-d9002b5cda18",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "2d85dbab-4d9d-4314-b65b-e911414d9a31",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7adc6b0c-ee49-4843-8db3-c5c3a6c7e93d",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}